# example-python-project

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cool_project/: __main__.py  calculus.py  weather.py
tests/: test_calculus.py  test_command_line.py  test_weather.py
